--- a/compose/src/main/res/values/colors.xml
+++ b/compose/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_e37326">#e37326</color>
+    <color name="color_7d7d7d">#7d7d7d</color>
+    <color name="color_4963b3">#4963b3</color>
+    <color name="color_3b9adf">#3b9adf</color>
 </resources>
